Closed Bug 1790586 Opened 2 years ago Closed 2 years ago

Perma build bustages /builds/worker/checkouts/gecko/js/src/wasm/WasmInitExpr.cpp:256:14: error: private field 'cx' is not used [-Werror,-Wunused-private-field] when Gecko merges to Beta on 2022-09-19

Categories

(Core :: JavaScript: WebAssembly, defect)

defect

Tracking

()

VERIFIED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 + verified

People

(Reporter: imoraru, Assigned: yury)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

- Central-as-early beta simulation.
- Central-as-late beta simulation.
How to run these simulations:

Failure log:

[task 2022-09-13T11:25:16.522Z] 11:25:16     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/js/src/wasm'
[task 2022-09-13T11:25:16.525Z] 11:25:16     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o Unified_cpp_js_src_wasm2.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -ftrivial-auto-var-init=pattern -DDEBUG=1 -DWASM_SUPPORTS_HUGE_MEMORY -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src/wasm -I/builds/worker/workspace/obj-build/js/src/wasm -I/builds/worker/workspace/obj-build/js/src -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/js/src/js-confdefs.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Werror=format -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_js_src_wasm2.o.pp   Unified_cpp_js_src_wasm2.cpp
[task 2022-09-13T11:25:16.526Z] 11:25:16     INFO -  In file included from Unified_cpp_js_src_wasm2.cpp:29:
[task 2022-09-13T11:25:16.526Z] 11:25:16    ERROR -  /builds/worker/checkouts/gecko/js/src/wasm/WasmInitExpr.cpp:256:14: error: private field 'cx' is not used [-Werror,-Wunused-private-field]
[task 2022-09-13T11:25:16.527Z] 11:25:16     INFO -    JSContext* cx;
[task 2022-09-13T11:25:16.527Z] 11:25:16     INFO -               ^
[task 2022-09-13T11:25:16.527Z] 11:25:16     INFO -  1 error generated.
[task 2022-09-13T11:25:16.527Z] 11:25:16    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:668: Unified_cpp_js_src_wasm2.o] Error 1
[task 2022-09-13T11:25:16.527Z] 11:25:16     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src/wasm'
[task 2022-09-13T11:25:16.527Z] 11:25:16    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: js/src/wasm/target-objects] Error 2
[task 2022-09-13T11:25:16.527Z] 11:25:16     INFO -  gmake[3]: *** Waiting for unfinished jobs....
[task 2022-09-13T11:25:16.528Z] 11:25:16     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/js/src'

Hi Yury! Can you please take a look at this? Your recent changes from Bug 1784156 are causing build bustages on beta simulations.
Thank you!

Flags: needinfo?(ydelendik)
Assignee: nobody → ydelendik
Status: NEW → ASSIGNED
Pushed by ydelendik@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6fe431f76c0f
Remove cx private field from wasm::InitExpr. r=rhunt
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch

Fix verified on today's beta simulation

Status: RESOLVED → VERIFIED
Flags: needinfo?(ydelendik)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: