Bug 1790586 - Remove cx private field from wasm::InitExpr. r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D157226